name:           haskell-sudoku-solver
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         John Simon

executable haskell-sudoku-solver
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   containers
  ghc-options:     -Wall

